# dug

./: .gitignore  LICENSE  README.md  RELEASING.md  TODO.md  install.sh  main.py  plan.md  pyproject.toml
.dug/: config.json  graph.json
.github/homebrew/: dug-cli.rb
.github/scoop/: dug-cli.json
.github/workflows/: release.yml  update-homebrew.yml
src/dug/: __main__.py  chunker.py  config.py  embeddings.py  git_context.py  graph.py  history.py  hooks.py  indexer.py  prompt_builder.py  retriever.py  vector_store.py  verifier.py  watcher.py
