[project]
name = "dug-cli"
version = "0.1.0"
description = "Dig into any bug with full codebase context"
requires-python = ">=3.10"
dependencies = [
  "click",
  "networkx",
  "tree-sitter>=0.22",
  "tree-sitter-python",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "lancedb",
  "watchdog",
  "sentence-transformers",
  "openai",
]

[project.scripts]
dug = "dug.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dug"]
