[project]
name = "dug-cli"
version = "0.1.6"
description = "Dig into any bug with full codebase context — zero LLM calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ratish Jain", email = "ratishjain6@gmail.com" }]
keywords = ["cli", "debugging", "code-search", "developer-tools", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "click",
  "networkx",
  "tree-sitter>=0.22",
  "tree-sitter-python",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "tree-sitter-typescript>=0.23.2",
  "lancedb",
  "watchdog",
  "fastembed",
]

[project.urls]
Homepage = "https://github.com/ratishjain12/dug"
Repository = "https://github.com/ratishjain12/dug"
"Bug Tracker" = "https://github.com/ratishjain12/dug/issues"

[project.optional-dependencies]
openai = ["openai"]

[project.scripts]
dug = "dug.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dug"]
